Created a DB Context class and linked mvc app to SSMS DB, added SSMS Connection string, Scafolded Claim Model to test linkage of mvc app and database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "KhumaloCraftDEV": "Data Source=(localdb)\\camDB1;Initial Catalog=Prog6212_DB;Integrated Security=True;TrustServerCertificate=True"
+    "Prog6212DEV": "Data Source=(localdb)\\camDB1;Initial Catalog=Prog6212_DB;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
