--- a/ST10251759_PROG6212_POE.csproj
+++ b/ST10251759_PROG6212_POE.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
